(lang dune 3.7)

(name squeak)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name squeak)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune (alcotest (and (or :with-test :dev) (>= 1.1.0))))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
